manifests/templates/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backstage-postgres
  namespace: backstage
spec:
  clusterIP: None
  selector:
    app: backstage-postgres
  ports:
    - port: 5432
      targetPort: 5432
